--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets/scripts/score.cs" />
     <Compile Include="Assets/scripts/playerMovement.cs" />
     <Compile Include="Assets/scripts/playerCollision.cs" />
+    <Compile Include="Assets/scripts/endTrigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
