--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,9 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/scripts/gameManager.cs" />
+    <Compile Include="Assets/scripts/coinFlip.cs" />
     <Compile Include="Assets/scripts/followPlayer.cs" />
     <Compile Include="Assets/scripts/score.cs" />
     <Compile Include="Assets/scripts/endTrigger.cs" />
+    <Compile Include="Assets/scripts/playerCollectibles.cs" />
     <Compile Include="Assets/scripts/playerMovement.cs" />
     <Compile Include="Assets/scripts/levelComplete.cs" />
     <Compile Include="Assets/scripts/credits.cs" />
